--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
+    compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.0'
     compile 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+
     compile 'io.reactivex.rxjava2:rxjava:2.0.8'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.blankj:utilcode:1.7.1'
@@ -43,6 +46,7 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+
     compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
     compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     compile("com.squareup.retrofit2:converter-simplexml:$retrofitVersion") {
@@ -51,7 +55,7 @@ dependencies {
         exclude module: 'xpp3'
     }
     compile "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
-    compile "com.trello.rxlifecycle2:rxlifecycle:$retrofitVersion"
+
     compile 'com.bigkoo:alertview:1.0.3'
     compile 'org.greenrobot:greendao:3.2.2'
     compile 'cn.finalteam:okhttpfinal:2.0.7'
