--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,13 +37,12 @@ dependencies {
     compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.0'
     compile 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
-
     compile 'io.reactivex.rxjava2:rxjava:2.0.8'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.blankj:utilcode:1.7.1'
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
     compile 'org.greenrobot:eventbus:3.0.0'
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+/*    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 
@@ -53,7 +52,7 @@ dependencies {
         exclude module: 'stax'
         exclude module: 'stax-api'
         exclude module: 'xpp3'
-    }
+    }*/
     compile "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
     compile 'com.bigkoo:alertview:1.0.3'
     compile 'org.greenrobot:greendao:3.2.2'
