--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,5 @@ dependencies {
     compile 'com.bigkoo:alertview:1.0.3'
     compile 'org.greenrobot:greendao:3.2.2'
     compile files('libs/BASE64.jar')
-
+    compile 'cn.yipianfengye.android:zxing-library:2.2'
 }
