--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
-        versionName "2.0"
+        versionName "2.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -42,21 +42,22 @@ dependencies {
     compile 'com.blankj:utilcode:1.7.1'
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
     compile 'org.greenrobot:eventbus:3.0.0'
-       debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-        releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-        testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-/*
-        compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
-        compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-        compile("com.squareup.retrofit2:converter-simplexml:$retrofitVersion") {
-            exclude module: 'stax'
-            exclude module: 'stax-api'
-            exclude module: 'xpp3'
-        }*/
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    /*
+            compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
+            compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+            compile("com.squareup.retrofit2:converter-simplexml:$retrofitVersion") {
+                exclude module: 'stax'
+                exclude module: 'stax-api'
+                exclude module: 'xpp3'
+            }*/
     compile "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
     compile 'com.bigkoo:alertview:1.0.3'
     compile 'org.greenrobot:greendao:3.2.2'
     compile files('libs/BASE64.jar')
     compile 'cn.yipianfengye.android:zxing-library:2.2'
     compile files('libs/rkapi.jar')
+    compile files('libs/usc.jar')
 }
