--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".MainActivity" android:launchMode="singleInstance"></activity>        <activity android:name=".cHuBeiWeiHuaActivity" android:launchMode="singleInstance"></activity>
         <activity android:name=".CBSD_ShangHaiActivity" android:launchMode="singleInstance"></activity>
         <activity android:name=".CBSD_HuBeiWeiHuaActivity" android:launchMode="singleInstance"></activity>
+        <activity android:name=".CBSD_SHGJActivity" android:launchMode="singleInstance"></activity>
         <activity android:name=".CBSD_CommonActivity" android:launchMode="singleInstance"></activity>
         <service android:name=".Service.SwitchService"></service>
         <receiver
