--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao'
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '28.0.2'
     defaultConfig {
         applicationId "com.hninstrument"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
-        versionName "2.9"
+        versionName "2.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -16,6 +16,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
     }
     sourceSets {
         main {
@@ -41,25 +45,25 @@ greendao {
 }
 def retrofitVersion = '2.2.0'
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-    compile 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
-    compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.0'
-    compile 'com.jakewharton:butterknife:8.6.0'
+    api 'com.android.support:appcompat-v7:25.3.1'
+    api 'com.android.support.constraint:constraint-layout:1.0.2'
+    testImplementation 'junit:junit:4.12'
+    api 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
+    api 'com.trello.rxlifecycle2:rxlifecycle-components:2.0'
+    api 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
-    compile 'io.reactivex.rxjava2:rxjava:2.0.8'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'com.blankj:utilcode:1.7.1'
-    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
-    compile 'org.greenrobot:eventbus:3.0.0'
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    api 'io.reactivex.rxjava2:rxjava:2.0.8'
+    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    api 'com.blankj:utilcode:1.7.1'
+    api 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+    api 'org.greenrobot:eventbus:3.0.0'
+    debugApi 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseApi 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     /*
             compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
             compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
@@ -68,14 +72,13 @@ dependencies {
                 exclude module: 'stax-api'
                 exclude module: 'xpp3'
             }*/
-    compile "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
-    compile 'com.bigkoo:alertview:1.0.3'
-    compile 'org.greenrobot:greendao:3.2.2'
-    compile files('libs/BASE64.jar')
-    compile 'cn.yipianfengye.android:zxing-library:2.2'
-    compile files('libs/rkapi.jar')
-    compile files('libs/usc.jar')
-    compile 'org.greenrobot:greendao:3.2.2'
-    compile 'org.greenrobot:greendao-generator:3.2.2'
-    compile 'net.zetetic:android-database-sqlcipher:3.5.2'
+    api "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+    api 'com.bigkoo:alertview:1.0.3'
+    api 'org.greenrobot:greendao:3.2.2'
+    api files('libs/BASE64.jar')
+    api 'cn.yipianfengye.android:zxing-library:2.2'
+    api files('libs/rkapi.jar')
+    api 'org.greenrobot:greendao:3.2.2'
+    api 'org.greenrobot:greendao-generator:3.2.2'
+    api 'net.zetetic:android-database-sqlcipher:3.5.2'
 }
