久违的修改

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".CBSD_SHGJActivity" android:launchMode="singleInstance"></activity>
         <activity android:name=".CBSD_CommonActivity" android:launchMode="singleInstance"></activity>
         <service android:name=".Service.SwitchService"></service>
+        <service android:name=".Service.SwitchServiceByDN"></service>
         <receiver
             android:name=".Receiver.TimeCheckReceiver">
         </receiver>
