--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,24 +19,61 @@
             </intent-filter>
         </activity>
         <activity android:name=".StartActivity"></activity>
-        <activity android:name=".MainActivity" android:launchMode="singleInstance"></activity>
-        <activity android:name=".CBSD_ShangHaiActivity" android:launchMode="singleInstance"></activity>
-        <activity android:name=".CBSD_HuBeiWeiHuaActivity" android:launchMode="singleInstance"></activity>
-        <activity android:name=".CBSD_SHGJActivity" android:launchMode="singleInstance"></activity>
-        <activity android:name=".CBSD_CommonActivity" android:launchMode="singleInstance"></activity>
-        <activity android:name=".StartActivityByDN" android:launchMode="singleInstance"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:launchMode="singleInstance"></activity>
+        <activity
+            android:name=".CBSD_ShangHaiActivity"
+            android:launchMode="singleInstance"></activity>
+        <activity
+            android:name=".CBSD_HuBeiWeiHuaActivity"
+            android:launchMode="singleInstance"></activity>
+        <activity
+            android:name=".CBSD_SHGJActivity"
+            android:launchMode="singleInstance"></activity>
+        <activity
+            android:name=".CBSD_CommonActivity"
+            android:launchMode="singleInstance"></activity>
+        <activity
+            android:name=".StartActivityByDN"
+            android:launchMode="singleInstance"></activity>
+        <activity android:name=".CBSD_HeibeiDNActivity"></activity>
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.science.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
+        <service
+            android:name=".HeibeiDNHelper.MyAccessibilityService"
+            android:label="采集器自动安装服务"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/accessibility_service" />
+        </service>
+        <service android:name=".HeibeiDNHelper.DownLoadService" />
         <service android:name=".Service.SwitchService"></service>
         <service android:name=".Service.SwitchServiceByDN"></service>
-        <receiver
-            android:name=".Receiver.TimeCheckReceiver">
-        </receiver>
+
+        <receiver android:name=".Receiver.TimeCheckReceiver"></receiver>
         <receiver android:name=".Receiver.BootBroadcastReceiver">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
     </application>
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
@@ -60,8 +97,10 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <uses-permission android:name="android.permission.GET_TASKS" />
 
     <uses-permission android:name="android.permission.INSTALL_PACKAGES" />
