--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
-        versionName "2.9"
+        versionName "3.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -46,40 +46,40 @@ greendao {
 
 def retrofitVersion = '2.2.0'
 dependencies {
-    api fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    api 'com.android.support:appcompat-v7:25.3.1'
-    api 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
-    api 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
-    api 'com.trello.rxlifecycle2:rxlifecycle-components:2.0'
-    api 'com.jakewharton:butterknife:8.6.0'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.0'
+    implementation 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
-    api 'io.reactivex.rxjava2:rxjava:2.0.8'
-    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    api 'com.blankj:utilcode:1.7.1'
-    api 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
-    api 'org.greenrobot:eventbus:3.0.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.0.8'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.blankj:utilcode:1.7.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+    implementation 'org.greenrobot:eventbus:3.0.0'
     debugApi 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseApi 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    /*
-            compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
-            compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-            compile("com.squareup.retrofit2:converter-simplexml:$retrofitVersion") {
-                exclude module: 'stax'
-                exclude module: 'stax-api'
-                exclude module: 'xpp3'
-            }*/
-    api "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
-    api 'com.bigkoo:alertview:1.0.3'
-    api 'org.greenrobot:greendao:3.2.2'
-    api files('libs/BASE64.jar')
-    api 'cn.yipianfengye.android:zxing-library:2.2'
-    api files('libs/rkapi.jar')
-    api 'org.greenrobot:greendao:3.2.2'
-    api 'org.greenrobot:greendao-generator:3.2.2'
-    api 'net.zetetic:android-database-sqlcipher:3.5.2'
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation("com.squareup.retrofit2:converter-simplexml:$retrofitVersion") {
+        exclude module: 'stax'
+        exclude module: 'stax-api'
+        exclude module: 'xpp3'
+    }
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+    implementation 'com.bigkoo:alertview:1.0.3'
+    implementation 'org.greenrobot:greendao:3.2.2'
+    implementation files('libs/BASE64.jar')
+    implementation 'cn.yipianfengye.android:zxing-library:2.2'
+    implementation files('libs/rkapi1.jar')
+    implementation files('libs/rkapi2.jar')
+    implementation 'org.greenrobot:greendao:3.2.2'
+    implementation 'org.greenrobot:greendao-generator:3.2.2'
+    implementation 'net.zetetic:android-database-sqlcipher:3.5.2'
 }
