--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,8 +35,8 @@
             android:name=".CBSD_CommonActivity"
             android:launchMode="singleInstance"></activity>
 
-        <activity android:name=".CBSD_HNMBYActivity"
-            android:launchMode="singleInstance"></activity>
+        <!--<activity android:name=".CBSD_HNMBYActivity"-->
+            <!--android:launchMode="singleInstance"></activity>-->
 
         <activity
             android:name=".StartActivityByDN"
